Rubocop: Fixes all local rubocop errors

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -30,6 +30,9 @@ Metrics/BlockLength:
     - "config/**/*"
     - "spec/**/*"
 
+Metrics/ParameterLists:
+  Enabled: false
+
 Metrics/MethodLength:
   Enabled: false
 
